--- a/static/index.html
+++ b/static/index.html
@@ -19,6 +19,8 @@
     <form id="formRexistro" name="rexistro" enctype="multipart/form-data">
 
       <input name="nome" type="text" placeholder="Introduce nome" />
+      <input name="apelido1" type="text" placeholder="Introduce apelido1" />
+      <input name="apelido2" type="text" placeholder="Introduce apelido2" />
       <input name="usuario" type="file" placeholder="introduce o ficheiro" />
 
       <button id="rexistrarUsuario">enviar</button>
