Cambio de repositorio

--- a/static/index.html
+++ b/static/index.html
@@ -14,7 +14,7 @@
       <a href="./contacto.html">contacto.html</a>
     </nav>
     Estou en Index -->
-    <img src="./imags/buscador.png" style="width: 20px;">
+    <!--<img src="./imags/buscador.png" style="width: 20px;">-->
 
     <form id="formRexistro" name="rexistro" enctype="multipart/form-data">
 
